public class AnimatorString
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string isJumping = "isJumping";
    internal static string isOnCelling = "isOnCelling";
    internal static string isOnWall = "isOnWall";
    internal static string Attack = "attack";
    internal static string CanMove = "canMove";
    internal static string HasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isDead = "isDead";
    internal static string IsHit = "isHit";
    internal static string hit = "hit";
    internal static string attackCooldown = "attackCooldown";
    internal static string rangeAttack = "rangeAttack";
    internal static string HasRangeTarget = "hasRangeTarget";
    internal static string hasArrowInRange = "hasArrowInRange";

    internal static string rangeAttackLazer = "rangeAttackLazer"; 

    // public static string HasRangeTargetLazer { get; internal set; }





    // public static string IsHit { get; internal set; }
}